@@ -21,6 +21,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -62,7 +63,7 @@ public class TestAnchorModifier extends JMeterTestCase {
         result.setResponseData(new TextFile(findTestFile(HTMLFileName)).getText(), null);
         result.setSampleLabel(context.toString());
         result.setSamplerData(context.toString());
-        result.setURL(new URL("http://bz.apache.org/fakepage.html"));
+        result.setURL(URI.create("http://bz.apache.org/fakepage.html").toURL());
         jmctx.setPreviousResult(result);
         AnchorModifier modifier = new AnchorModifier();
         modifier.setThreadContext(jmctx);
@@ -360,7 +361,7 @@ public class TestAnchorModifier extends JMeterTestCase {
 
 
     private static HTTPSamplerBase makeContext(String url) throws MalformedURLException {
-        URL u = new URL(url);
+        URL u = URI.create(url).toURL();
         HTTPSamplerBase context = new HTTPNullSampler();
         context.setDomain(u.getHost());
         context.setPath(u.getPath());
